[DATALAB-2250]: Fixed invisible Copy icon on small screen. Fixed bugs on reopened tickets

--- a/services/self-service/src/main/resources/webapp/src/app/resources/exploratory/detail-dialog/detail-dialog.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/resources/exploratory/detail-dialog/detail-dialog.component.scss
@@ -138,4 +138,8 @@
   }
 }
 
+.resources-url{
+  max-width: 70%;
+}
+
 
